--- a/brainstorming.html
+++ b/brainstorming.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="navbar">
-        <a class="nav-button" href="#home">Home</a>
+        <a class="nav-button" href="index.html">Home</a>
         <a class="nav-button" href="#brainstorming">Brainstorming</a>
         <a class="nav-button" href="#resources">Resources</a>
         <a class="nav-button" href="#evaluation">Evaluation</a>
