2nd attempt buttons

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
   
 
-    <!-- Header with Image -->
+    
     <div class="header">
         <img src="header.jpg" alt="Header Image" class="header-image" />
     </div>
 
-      <!-- Navbar -->
+      
       <div class="navbar">
         <a class="nav-button" href="#home">Home</a>
-        <a class="nav-button" href="#brainstorming">Brainstorming</a>
+        <a class="nav-button" href="brainstorming.html">Brainstorming</a>
         <a class="nav-button" href="#resources">Resources</a>
         <a class="nav-button" href="#evaluation">Evaluation</a>
         <a class="nav-button" href="#about">About</a>
